# ai-backend-foundation

./: .dockerignore  .editorconfig  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_base.py  0002_auth.py  0003_users.py
app/api/: __init__.py  errors.py  pagination.py  security_headers.py  v1.py
app/api/tests/: test_v1_router.py  (+3 more)
app/auth/: __init__.py  api.py  deps.py  domain.py  persistence.py  policies.py  ports.py  service.py
app/core/: __init__.py  container.py  di.py  lifespan.py
app/main/: __init__.py  app_factory.py
app/observability/: __init__.py  correlation.py  health.py  logging.py  metrics.py  middleware.py  tracing.py
app/shared/: __init__.py  clock.py  errors.py  ids.py  pagination.py  problem_details.py  pydantic.py  result.py  types.py
app/users/: __init__.py  api.py  deps.py  domain.py  persistence.py  service.py
deploy/: otel-collector-config.yaml
docs/: architecture.md  dependency-graph.md  folder-structure.md  technology-decisions.md
docs/adr/: 0001-observability-stack-structlog-otel.md  0002-authentication-jwt-argon2.md  0003-async-sqlalchemy-asyncpg-alembic.md  0004-llm-provider-abstraction.md  0005-vector-store-abstraction.md  0006-pydanticai-as-agent-runtime.md  0007-no-generic-repository-pattern.md  0008-prompt-management-and-versioning.md  0009-background-jobs-arq.md  0010-rfc9457-problem-details-errors.md  0011-enforce-module-boundaries-with-import-linter.md  0012-future-mcp-compatibility.md  0013-config-strategy-pydantic-settings.md  0014-uv-as-package-manager.md  0015-ruff-as-single-linter-formatter.md  0016-vertical-slice-modules.md  0017-dependency-injection-strategy.md  0018-platform-ports-layer.md  0019-ai-governance-module.md  0020-golden-path-vertical-slice.md  0021-repository-rename-to-foundation.md  0022-promote-arq-to-phase-2.md  0023-composition-root-ownership.md  0024-define-llm-owned-governance-gate-contract.md  0025-direct-import-semantics-for-core-wiring-only-infra.md  0026-infrastructure-as-outer-adapter-ring.md  0027-use-pragmatic-ports-and-adapters.md  0028-use-case-orchestration-explicit-inside-modules.md  0029-keep-framework-and-provider-type-at-the-edges.md  0030-centralize-application-wiring.md  0031-platform-owned-sqlalchemy-mapping-foundation.md  README.md
docs/ai/: README.md  apply-review.md  architect.md  implement-task.md  review-task.md
docs/implementation/: patterns.md  review.md  roadmap.md  rules.md
docs/phase-2-revision/: 01-contradictions.md  02-revised-module-tree.md  03-revised-dependency-graph.md  04-phase-2-scope.md  05-phase-3-scope.md  06-risk-register.md
tests/: conftest.py  test_imports.py  test_main.py  test_tooling.py
tests/api/: test_correlation_edge.py  test_problem_details_edge.py
tests/integration/: test_alembic.py  test_auth_api.py  test_auth_persistence.py  test_auth_refresh_reuse.py  test_db_pgvector.py  test_lifespan.py  test_migration_pgvector.py  test_users_me.py
(+185 files in other folders)
