[project]
name = "ai-backend-foundation"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
main = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pgvector",
    "redis",
    "arq",
    "httpx",
    "tenacity",
    "structlog",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-exporter-otlp",
    "argon2-cffi",
    "pyjwt[crypto]",
    "jinja2",
    "pyyaml",
    "python-multipart",
]
test = [
    { include-group = "main" },
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "testcontainers[postgresql,redis]",
    "respx",
    "freezegun",
    "dirty-equals",
]
dev = [
    { include-group = "test" },
    "ruff",
    "mypy",
    "import-linter",
    "pre-commit",
    "types-pyyaml",
]

[tool.uv]
managed = true
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "N", "S", "ANN", "ASYNC", "RUF", "C4", "SIM", "PL", "PT", "TRY", "T20"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]
"alembic/**" = ["INP001"]

[tool.mypy]
strict = true
python_version = "3.13"
files = ["app"]
plugins = ["pydantic.mypy"]
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit",
    "integration",
    "api",
    "contract",
    "slow",
]
addopts = "--strict-markers --cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/**/__init__.py"]

[tool.coverage.report]
show_missing = true
